# faster-whisper-server-rocm

./: Dockerfile.rocm  README.md  pyproject.toml
faster_whisper_server/: config.py  main.py
